--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   google_fonts: ^6.3.0
   font_awesome_flutter: ^10.9.0
   pinput: ^6.0.1
+  http: ^1.6.0
+  provider: ^6.1.5+1
+  intl: ^0.20.2
+  responsive_builder: ^0.7.1
 
 dev_dependencies:
   flutter_test:
